--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>PONG Game Development by William Fernandes (williamfn)</title>
     <style>* { padding: 0; margin: 0; }</style>
-    <script src="js/phaser.min.js"></script>
+    <script src="https://github.com/photonstorm/phaser/releases/download/v2.4.3/phaser.min.js"></script>
 </head>
 <body>
 <script src="js/pong.min.js" type="text/javascript"></script>
